Fix up issues with page layout gaps

--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -2,14 +2,14 @@ page-filter {
 
   .content {
 
-      .specimen {
-        width: 50%;
-        display: inline-block;
+    .specimen {
+      display: inline;
 
       .item {
+        width: 47%;
         background: #eee;
         margin: 3px;
-        display: inline-flex;
+        display: inline-block;
       }
 
       .card-content {
@@ -36,109 +36,108 @@ page-filter {
       .filter-item {
         animation: fadeInUp 0.6s;
       }
+    }
 
-      #sortingFilters {
+    #sortingFilters {
 
-        padding: 1em;
-        height: 100%;
+      padding: 1em;
+      height: 100%;
 
-        h2 {
-          color: #342392;
-          margin-top: 0;
+      h2 {
+        color: #342392;
+        margin-top: 0;
+      }
+
+      #accordion {
+
+      }
+
+      .accordion-content-wrapper {
+        border: 1px #488aff solid;
+        border-radius: 10px;
+        margin-bottom: 5px;
+
+        h4.accordion-toggle {
+          cursor: pointer;
+          color: #488aff;
+          padding: 8px;
+          margin-bottom: 0;
+          margin-top: 2px;
+
+          .icon {
+            float: right;
+          }
         }
 
-        #accordion {
-
+        .accordion-content {
+          display: none;
+          padding: 5px;
+          p {
+            padding: 0px 5px;
+          }
         }
 
-        .accordion-content-wrapper {
-          border: 1px #488aff solid;
-          border-radius: 10px;
-          margin-bottom: 5px;
+        .accordion-content.default {
+          display: block;
+        }
 
-          h4.accordion-toggle {
-            cursor: pointer;
-            color: #488aff;
-            padding: 8px;
-            margin-bottom: 0;
-            margin-top: 2px;
-
-            .icon {
-              float: right;
-            }
-          }
-
-          .accordion-content {
-            display: none;
-            padding: 5px;
-            p {
-              padding: 0px 5px;
-            }
-          }
-
-          .accordion-content.default {
-            display: block;
-          }
-
-          ul {
-            list-style-type: none;
-          }
-
+        ul {
+          list-style-type: none;
         }
 
       }
+
     }
 
   }
 
-}
+  @keyframes Items {
+    0% {
+      opacity: 0;
+      -webkit-transform: scale(0.3) rotateY(90deg);
+      transform: scale(0.3) rotateY(90deg);
+    }
 
-@keyframes Items {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.3) rotateY(90deg);
-    transform: scale(0.3) rotateY(90deg);
+    60% {
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
+    }
+
+    90% {
+      -webkit-transform: scale(0.9);
+      transform: scale(0.9);
+    }
+
+    100% {
+      opacity: 1;
+    }
   }
 
-  60% {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+  @-webkit-keyframes fadeInUp {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+    }
+
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
   }
 
-  90% {
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-  }
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+    }
 
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-
-  to {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-
-  to {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
   }
 }
